@@ -1,3 +1,9 @@
+2010-08-06  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	Code cleanup.
+	* varobj.c (varobj_create): Move variables fi, old_fi and block to
+	a more inner block.
+
 2010-08-05  Pedro Alves  <pedro@codesourcery.com>
 
 	* configure.tgt (alpha*-*-linux*, am33_2.0*-*-linux*, frv-*-*)
